maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:19: error: ')' expected but 'return' found.
  return false;
  ^ShortestPathMaze:27: error: ')' expected but 'return' found.
  return false;
  ^